Replace "Play Again" with symbol

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
   </head>
   <body>
     <div class="jumbotron-fluid">
@@ -37,8 +38,8 @@
         <div id="game-over-screen" class="selection-screen vertical-center text-center">
           <div class="two-options">
             <p id="win-message"></p>
-            <a href="#" class="anchor">
-              <p id="play-again">Play Again?</p>
+            <a href="#" class="anchor" id="play-again">
+              <i class="fas fa-redo"></i>
             </a>
           </div>
         </div>
