--- a/index.html
+++ b/index.html
@@ -6,8 +6,15 @@
     </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
+    <link
+    rel="stylesheet"
+    href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+    crossorigin="anonymous">
+    <script
+    defer
+    src="https://use.fontawesome.com/releases/v5.0.6/js/all.js">
+    </script>
   </head>
   <body>
     <div class="jumbotron-fluid">
@@ -35,7 +42,9 @@
           </div>
         </div>
         <!--Screen when game is finished-->
-        <div id="game-over-screen" class="selection-screen vertical-center text-center">
+        <div
+        id="game-over-screen"
+        class="selection-screen vertical-center text-center">
           <div class="two-options">
             <p id="win-message"></p>
             <a href="#" class="anchor" id="play-again">
@@ -84,8 +93,21 @@
         </div>
       </div>
     </div>
-    <footer>Made by <a href="https://codepen.io/alex-hart/full/JMajKy" target="_blank" class="anchor" id="name-space">Alex Hart</a></footer>
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <footer>
+      Made by
+      <a
+      href="https://codepen.io/alex-hart/full/JMajKy"
+      target="_blank"
+      class="anchor"
+      id="name-space">
+        Alex Hart
+      </a>
+    </footer>
+    <script
+    src="https://code.jquery.com/jquery-3.3.1.min.js"
+    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    crossorigin="anonymous">
+    </script>
     <script src="js/game.js"></script>
   </body>
 </html>
