--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <footer>
       Made by
       <a
-      href="https://codepen.io/alex-hart/full/JMajKy"
+      href="https://alex-hart.github.io/portfolio-website/"
       target="_blank"
       class="anchor"
       id="name-space">
